--- a/src/app/components/part1.css
+++ b/src/app/components/part1.css
@@ -20,23 +20,13 @@
 }
 
 .nav-mini-text {
-    font-size: 14px;
+    font-size: 12px;
     margin: 0 8px;
-    text-wrap: nowrap;
-}
-
-@media (min-width: 880px) {
-    .nav-mini-text {
-        font-size: 22px !important;
-    }
-
-    .nav-mini-text-b {
-        font-size: 22px !important;
-    }
+    white-space: nowrap;
 }
 
 .nav-mini-text-b {
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .text-effect-b {
@@ -49,7 +39,7 @@
 }
 
 .nav-l {
-    padding: 8px;
+    padding: 14px 20px;
     border-style: solid;
     border-color: #5b616539;
     border-width: 2px;
@@ -63,7 +53,7 @@
 }
 
 .nav-r {
-    padding: 8px;
+    padding: 14px 20px;
     border-style: solid;
     border-color: #207bb739;
     border-width: 2px;
@@ -130,7 +120,7 @@
 .the-text-minor {
     padding-top: 32px;
     padding-bottom: 16px;
-    font-size: 18px;
+    font-size: 24px;
 }
 
 .fancy-gradient {
@@ -146,7 +136,7 @@
 }
 
 .grey-button {
-    padding: 4px 16px;
+    padding: 8px 24px;
     border-style: solid;
     border-color: #5b616539;
     border-width: 2px;
@@ -156,7 +146,7 @@
 }
 
 .blue-button {
-    padding: 4px 16px;
+    padding: 8px 24px;
     border-style: solid;
     border-color: #207bb739;
     border-width: 2px;
@@ -181,6 +171,16 @@
 .header-text-minor {
     font-size: 22px;
     padding: 84px 32px 32px 32px;
+}
+
+@media (min-width: 880px) {
+    .nav-mini-text {
+        font-size: 17px;
+    }
+
+    .nav-mini-text-b {
+        font-size: 17px;
+    }
 }
 
 @media (min-width: 880px) {
